# descri-o-do-caralho

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: __main__.py  content.py  extractor.py  main.py  names.py  ocr.py  template.py  web.py
src/templates/: index.html
tests/: test_content.py  test_names.py  test_ocr.py  test_template.py
